@@ -1,6 +1,8 @@
 Changes
 examples/ex1.pl
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -23,12 +25,12 @@ t/data/ex5.pyx
 t/data/ex6.pyx
 t/data/ex7.pyx
 t/data/ex8.pyx
-t/PYX-XMLNorm/00-use.t
-t/PYX-XMLNorm/01-version.t
-t/PYX-XMLNorm/02-pod_coverage.t
-t/PYX-XMLNorm/03-pod.t
-t/PYX-XMLNorm/04-new.t
-t/PYX-XMLNorm/05-parse.t
-t/PYX-XMLNorm/06-parse_file.t
-t/PYX-XMLNorm/07-parse_handler.t
+t/PYX-XMLNorm/01-use.t
+t/PYX-XMLNorm/02-version.t
+t/PYX-XMLNorm/03-new.t
+t/PYX-XMLNorm/04-parse.t
+t/PYX-XMLNorm/05-parse_file.t
+t/PYX-XMLNorm/06-parse_handler.t
 XMLNorm.pm
+xt/PYX-XMLNorm/01-pod_coverage.t
+xt/PYX-XMLNorm/02-pod.t
