@@ -1,5 +1,6 @@
 0.04
  - Improve SEE ALSO section in doc.
+ - Move author tests to xt/ directory.
  - Update Module::Install to 1.16 version.
 
 0.03 2015-03-31T23:05:39+02:00
